--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
 
-        <link rel="stylesheet" href="build/cookie-banner.css">
-        <script src="build/cookie-banner.js"></script>
+        <link rel="stylesheet" href="dist/cookie-banner.css">
+        <script src="dist/cookie-banner.js"></script>
 
         <script>
             document.addEventListener('DOMContentLoaded', () => {
